package com.directi.training.isp.exercise_refactored;

public interface ISensor {
    void proximityCallback();
}
