package com.directi.training.isp.exercise_refactored;

public interface ITimer {
    void timeOutCallback();
}
